# demand_forecasting

./: .gitignore  README.md  cleanup_processed_files.py  convert_to_parquet.py  lstm_model_pytorch.py  prepare_data.py  prepare_lstm_data.py  pyproject.toml  pytest.ini  requirements.txt
data/: DATA_DESCRIPTION.md
src/demand_forecasting/: __init__.py  config.yaml  train.py
src/demand_forecasting/data/: __init__.py  etl.py  sequence.py
src/demand_forecasting/modelling/: __init__.py  lstm.py  wavenet.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py
